--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/themes": "2.0.3",
     "@scaffold-stark/stark-burner": "0.1.8",
@@ -38,10 +39,12 @@
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "starknet": "6.12.1",
     "type-fest": "^4.6.0",
     "usehooks-ts": "^2.13.0",
+    "zod": "^3.24.1",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
