--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -27,9 +27,12 @@
     "@starknet-react/typescript-config": "0.0.0",
     "abi-wan-kanabi": "^2.2.2",
     "blo": "^1.1.1",
+    "clsx": "^2.1.1",
     "daisyui": "^4.7.3",
     "ethers": "^6.12.0",
+    "framer-motion": "^12.5.0",
     "get-starknet-core": "^4.0.0",
+    "lucide-react": "^0.483.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -42,6 +45,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "starknet": "6.12.1",
+    "tailwind-merge": "^3.0.2",
     "type-fest": "^4.6.0",
     "usehooks-ts": "^2.13.0",
     "zod": "^3.24.1",
