--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -10,12 +10,15 @@ starknet = "2.9.2"
 # Change to just "openzeppelin" to use full features
 openzeppelin_access = "0.20.0"
 openzeppelin_token = "0.20.0"
+openzeppelin_upgrades = "0.20.0"
 
 [dev-dependencies]
 openzeppelin_utils = "0.20.0"
 snforge_std = "0.34.0"
+cairo_test = "2.9.2"
 
 [[target.starknet-contract]]
+sierra = true
 casm = true
 
 [tool.fmt]
@@ -25,3 +28,6 @@ sort-module-level-items = true
 name = "SEPOLIA_LATEST"
 url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
 block_id.tag = "latest"
+
+[tool.snforge]
+exit_first = true
