--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -11,6 +11,7 @@ starknet = "2.9.2"
 openzeppelin_access = "0.20.0"
 openzeppelin_token = "0.20.0"
 openzeppelin_upgrades = "0.20.0"
+openzeppelin_introspection = "0.20.0"
 
 [dev-dependencies]
 openzeppelin_utils = "0.20.0"
