--- a/packages/snfoundry/contracts/Scarb.toml
+++ b/packages/snfoundry/contracts/Scarb.toml
@@ -9,9 +9,10 @@ edition = "2023_11"
 starknet = "2.9.2"
 # Change to just "openzeppelin" to use full features
 openzeppelin_access = "0.20.0"
+openzeppelin_introspection = "0.20.0"
+openzeppelin_security = "0.20.0"
 openzeppelin_token = "0.20.0"
 openzeppelin_upgrades = "0.20.0"
-openzeppelin_introspection = "0.20.0"
 
 [dev-dependencies]
 openzeppelin_utils = "0.20.0"
