--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.5.0",
-    "postcss": "^8.4.38"
+    "postcss": "^8.4.38",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1"
   }
 }
